--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,35 +3,195 @@
     font-family: 'Lato', sans-serif;
 }
 
+body {
+    margin: 0;
+}
+
+#content {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
 ul {
     list-style: none;
     padding: 0;
+    margin: 0;
 }
 a {
     text-decoration: none;
 }
-.navigation{
-    height: 85px;
-    padding-bottom: 10px;
+
+h2 {
+    text-transform: uppercase;
+}
+
+i {
+    font-family: 'Font Awesome 5 Free', 'Font Awesome 5 Brands';
+    font-weight: 900;
+    color: white;
+    font-style: normal;
+}
+
+/*стили Ани начало*/
+.menu {
+    display: flex;
+    flex-direction: column;
+    width: 1170px;
+}
+
+.top-container {
+    display: flex;
+    flex-direction: row;
+}
+.logo_img {
+    margin-left: 18px;
+    padding-top: 20px;
+    margin-right: 20px;
+    position: relative;
+}
+
+.logo_img:hover {
+    opacity: 0.8;
+}
+
+.copyright_logo {
+    position: absolute;
+    top: 72px;
+    width: 100%;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: white;
+    opacity: 0.9;
+}
+
+.copyright_logo span{
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    letter-spacing: 1px;
+    color: black;
+}
+
+
+.top-bars {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding-bottom: 13px;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+}
+
+.top-bars li {
+    display: inline-block;
+    letter-spacing: 1pt;
+    font-size: 12pt;
+}
+
+.top-bars li:last-child {
+    padding-right: 0;
+}
+
+.top {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    height: 37px;
+    padding: 0;
+    margin: 0;
+}
+
+.top li {
+    padding: 8px 25px 0 0;
+    letter-spacing: 1pt;
+    font-size: 12pt;
+}
+
+.top a {
+    color: #434343;
+}
+
+.lower {
+    display: flex;
+    justify-content: flex-end;
+    align-content: center;
+    background-color: #f6f6f6;
+    width: 100%;
+    height: 90px;
+}
+
+
+.lower li {
+    height: 100%;
+}
+
+.lower a {
+    color: #ffffff;
+
+    font-family: 'Lato', sans-serif;
+    display: inline-block;
+    height: 100%;
+    width: 116px;
+    padding-top: 35px;
+    background-color: #05aecc;
+    font-size: 16px;
+    text-align: center;
+}
+
+.lower li:not(:last-child) {
+    margin-right: 2px;
+}
+
+.lower li:nth-child(even) a
+{
+    background-color: #ef5966;
+}
+
+.lower .bar-img a {
+    width: 142px;
+}
+
+.lower .bar-img a i {
+    font-size: 25px;
+}
+
+.lower li a:hover {
+    color:  #ef5966;
+    background-color: #ffffff;
+}
+
+.lower li:nth-child(even) a:hover {
+    color: #05aecc;
+}
+
+.navigation {
+    height: 70px;
 }
 
 .nav_buttons {
     display: flex;
     justify-content: center;
+    align-content: center;
+    height: 100%;
     padding-left: 0;
     margin-left: 0;
     background-color: #05aecc;
 }
+
 .nav_buttons li {
-    display: inline;
+    display: inline-block;
 }
+
 .nav_buttons a {
-    font-family: 'Lato', sans-serif;
     color: #ffffff;
     display: inline-block;
-    padding: 20px;
+    height: 100%;
+    padding: 25px;
+    letter-spacing: 1pt;
     background-color: #05aecc;
-    font-size: 16px;
+    font-size: 12pt;
     text-align: justify;
 }
 
@@ -40,80 +200,486 @@ a {
     color: #ef5966;
 }
 
-.first_menu, .second_menu
-{
-    display: flex;
-    justify-content: flex-end;
-}
 .copyright
 {
     display: flex;
     justify-content: space-between;
 }
-.footer_list
-{
-    display: flex;
-    flex-direction: column;
+
+.navigation_img {
+    width: 1170px;
+    margin-top: 15px;
 }
 
-.footer-columns
-{
+.img-container {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
-}
-.slider{
-    display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: center;
-}
-.left-col{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-}
-.right-col{
-    display: flex;
-    flex-direction: column;
-    justify-content: right;
 }
 
-.left-col img:hover{
+.left-col {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.right-col {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.left-col img:hover {
     cursor: pointer;
 }
 
-.right-col img:hover{
+.right-col img:hover {
     cursor: pointer;
 }
 
-.search{
-    width: 100%;
-    height: 175px;
-    padding-bottom: 5px;
-}
-.search_form{
-    background-color: #f0626e;
+#men {
     position: relative;
-    #padding: 55px;
-    width: 100%;
 }
 
-.search_inp{
-    width: 485px;
+#men .upper-text {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    text-transform: uppercase;
+    bottom: 60px;
+    width: 350px;
+    height: 105px;
+    padding-left: 20px;
+    padding-top: 10px;
+    background: rgba(54, 42, 79, 0.8)
+}
+
+#men .upper-text .title {
+    margin: 0;
+    font-family: Aparajita, sans-serif;
+    font-size: 58px;
+    line-height: 0.7;
+    font-weight: 700;
+    color: #ef5966;
+}
+
+#men .upper-text .text {
+    margin: 0;
+    line-height: 1.2;
+    font-family: Lato, sans-serif;
+    font-size: 13px;
+    font-weight: 700;
+    color: #ffffff;
+}
+
+#men .lower-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    height: 40px;
+    bottom: 18px;
+    width: 350px;
+    background: rgba(239, 89, 102, 0.87);
+}
+
+#men .lower-text .text {
+    font-family: Aparajita, sans-serif;
+    font-size: 20px;
+    line-height: 1.2;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #ffffff;
+}
+img:hover, .upper-layer:hover {
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+#women {
+    position: relative;
+}
+
+#women .upper-text {
+    position: absolute;
+    height: 83px;
+    width: 270px;
+    bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    text-transform: uppercase;
+    background: rgba(54, 42, 79, 0.8);
+    padding-left: 15px;
+}
+
+#women .upper-text .title {
+    margin: 0;
+    font-family: Aparajita, sans-serif;
+    font-size: 35px;
+    line-height: 0.8;
+    font-weight: 700;
+    color: #ef5966;
+}
+
+#women .upper-text .text {
+    margin: 0;
+    line-height: 1.2;
+    font-family: Lato, sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    color: #ffffff;
+}
+
+#kids {
+    position: relative;
+}
+
+#kids .upper-layer{
+    position: absolute;
+    bottom: 5px;
+    top:0;
+    left: 0;
+    width: 100%;
+    background: rgba(20, 34, 81, 0.5);
+}
+
+
+
+
+#kids .buttons-baby-shop {
+    
+    bottom: 28px;
+    right: 0;
+}
+
+#crafts {
+    position: relative;
+}
+
+#crafts .buttons-crafts i {
+    font-size: 25px;
+}
+
+#crafts .buttons-crafts  {
+    display: flex;
+    height: 55px;
+    color: white;
+    align-items: stretch;
+    justify-content: center;
+    position: absolute;
+    bottom: 5px;
+    right: 0;
+}
+
+#crafts .buttons-text {
+    background: rgba(54, 42, 79, 0.8);
+    width: 203px;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+#crafts .buttons-text:hover {
+    cursor: pointer;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+
+
+
+
+
+#search {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     height: 100%;
+    margin-bottom: 5px;
+    background-color: #f0626e;
+}
+#search_form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 70px;
+    width: 570px;
+}
+
+#search_button {
+    background: transparent;
     border: none;
 }
 
-.left-col div{
-    padding-right: 5px;
+
+#search_button:hover {
+    cursor: pointer;
 }
 
-#content{
-    align-items: center;
+#search_inp {
+    width: 100%;
+    height: 100%;
+    border: none;
+    margin-right: 15px;
+    margin-left: 10px;
+}
+
+
+#search_form input[type="text"] {
+    font-family: Lato, sans-serif;
+    font-size: 16px;
+}
+
+
+#jewelry {
+    position: relative;
+}
+
+.jewelry-title {
+    position: absolute;
+    right: 0;
+    top: 115px;
+    width: 100px;
+    bottom: 5px;
+}
+
+.jewelry-title .main-rectangle {
+    position: absolute;
+    right: 0;
+    height: 100%;
+    width: 85px;
+    background: rgba(54, 42, 79, 0.58);
+}
+
+.jewelry-title .rectangle {
+    position: absolute;
+    right: 0;
+    top: 18px;
+    height: 85px;
+    width: 100%;
+    background: rgba(240, 98, 110, 0.98);
+}
+
+.jewelry-title .ellipse {
+    position: absolute;
+    left: 23px;
+    top: 17px;
+    height: 53px;
+    width: 53px;
+    border-radius: 50%;
+    background-color: #ffffff;
+}
+
+.jewelry-title .ellipse:hover{
+    cursor: pointer;
+}
+
+.jewelry-title img {
+    position: absolute;
+    left: 43px;
+    top: 32px;
+}
+
+.jewelry-name {
+    position: absolute;
+    bottom: 110px;
+    right: -80px;
+    font-family: Aparajita, sans-serif;
+    font-size: 64px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #ffffff;
+    transform: rotate(-90deg);
+}
+
+.jewelry-name:hover {
+    cursor: pointer;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.jewelry-title .triangle {
+    position: absolute;
+    top: 103px;
+    right: 85px;
+    border-top: 10px solid rgba(197, 81, 91, 1);
+    border-left: 15px solid transparent;
+}
+
+
+
+
+
+
+
+
+
+footer {
+    font-family: Lato, sans-serif;
+}
+
+.footer-columns {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 1170px;
+    font-family: Lato, sans-serif;
+    line-height: 30px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+
+.footer_tittle {
+    font-size: 25px;
+    margin: 0;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #434343;
+}
+
+.footer-under-title {
+    margin-top: 35px;
+}
+
+.footer_social {
+    margin-top: 15px;
+}
+
+.footer_list {
     display: flex;
     flex-direction: column;
+    font-size: 16px;
+    text-transform: none;
+    color: #676767;
 }
+
+.top a:hover, .footer_list a:hover{
+    color: rgba(0,0,0,0.4);
+}
+
+.footer_signup {
+    display: flex;
+    flex-direction: column;
+    font-family: Lato, sans-serif;
+    font-size: 14px;
+    width: 375px;
+    height: 120px;
+    margin-bottom: 35px;
+}
+
+.footer_signup input {
+    height: 70px;
+    border: 1px solid #dedede;
+}
+
+.footer_signup button {
+    height: 50px;
+    border: none;
+    color: #ffffff;
+    background-color: #05aecc;
+    cursor: pointer;
+}
+
+.footer_signup button:hover {
+    background-color: #ffffff;
+    color: #ef5966;
+    border: 1px solid #ef5966;
+}
+
+.footer_signup input::placeholder {
+    text-align: center;
+    color: #434343;
+}
+
+
+.footer_signup input[type="text"] {
+    font-family: Lato, sans-serif;
+    font-size: 14px;
+}
+
+.footer_social {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    height: 55px;
+}
+
+.footer_social li {
+    display: flex;
+    width: 55px;
+    height: 100%;
+    margin-right: 10px;
+}
+
+.footer_social a {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.facebook {
+    background-color: #39599f;
+}
+
+.google {
+    background-color: #1872bf;
+}
+
+.rss {
+    background-color: #f8bc2e;
+}
+
+.twitter {
+    background-color: #45b0e3;
+}
+
+.flickr {
+    background-color: #ff0084;
+}
+
+.footer_social li a:hover{
+    background: rgba(0,0,0,0.1);
+}
+
+.copyright {
+    display: flex;
+    align-items: center;
+    height: 65px;
+    font-size: 14px;
+    line-height: 30px;
+    font-weight: 400;
+    color: #434343;
+}
+
+.copyright a {
+    color: #f0626e;
+}
+
+.copyright a:hover {
+    color: #05aecc;
+}
+
+footer hr {
+    width: 100%;
+    height: 1px;
+    border: none;
+    background: #b9b9b9;
+    margin: 0;
+}
+
+
+/*стили Ани конец*/
+
 /*стили Тани начало*/
 .new-products {
     margin: 15px;
