--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,12 @@
+@font-face {
+font-family: "Aparajita"; 
+// адрес шрифта и тип 
+src: url("https://github.com/Elbarono/rpi_lab1_atm.github.io/edit/main/fonts/Aparajita.ttf") format("truetype"); 
+font-style: normal; 
+font-weight: normal; 
+} 
+
+
 * {
     box-sizing: border-box;
     font-family: 'Lato', sans-serif;
