--- a/stylesheet.css
+++ b/stylesheet.css
@@ -258,7 +258,7 @@ i {
 #men .upper-text .title {
     margin: 0;
     font-family: 'Lora', sans-serif;
-    font-size: 58px;
+    font-size: 50px;
     line-height: 0.7;
     font-weight: 700;
     color: #ef5966;
@@ -286,7 +286,7 @@ i {
 
 #men .lower-text .text {
     font-family: 'Lora', sans-serif;
-    font-size: 20px;
+    font-size: 15px;
     line-height: 1.2;
     font-weight: 700;
     text-transform: uppercase;
@@ -318,7 +318,7 @@ img:hover, .upper-layer:hover {
 #women .upper-text .title {
     margin: 0;
     font-family: 'Lora', sans-serif;
-    font-size: 35px;
+    font-size: 30px;
     line-height: 0.8;
     font-weight: 700;
     color: #ef5966;
@@ -351,7 +351,7 @@ img:hover, .upper-layer:hover {
 
 #kids .buttons-baby-shop {
     
-    bottom: 28px;
+    bottom: 20px;
     right: 0;
 }
 
@@ -370,7 +370,7 @@ img:hover, .upper-layer:hover {
     align-items: stretch;
     justify-content: center;
     position: absolute;
-    bottom: 5px;
+  /*  bottom: 5px;*/
     right: 0;
 }
 
@@ -488,7 +488,7 @@ img:hover, .upper-layer:hover {
 .jewelry-name {
     position: absolute;
     bottom: 110px;
-    right: -80px;
+    right: -60px;
     font-family: 'Lora', sans-serif;
     font-size: 64px;
     font-weight: 400;
