--- a/stylesheet.css
+++ b/stylesheet.css
@@ -202,7 +202,7 @@ h2 {
 .navigation_img {
     width: 1170px;
     margin-top: 15px;
-    margin-bottom: 10px;
+    margin-buttom: 10px;
 }
 
 .img-container {
