--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,10 +44,6 @@ h2 {
     position: relative;
 }
 
-.logo_img:hover {
-    opacity: 0.8;
-}
-
 .copyright_logo {
     position: absolute;
     top: 72px;
@@ -254,7 +250,7 @@ h2 {
     margin: 0;
     line-height: 1.2;
     font-size: 13px;
-    font-weight: 500;
+    font-weight: 700;
     color: #ffffff;
 }
 
@@ -274,12 +270,14 @@ h2 {
     font-family: 'Lora', sans-serif;
     font-size: 15px;
     line-height: 1.2;
-    font-weight: 400;
+    font-weight: 700;
     text-transform: uppercase;
     color: #ffffff;
 }
 
-.navigation_img img:hover, .upper-layer:hover {
+.logo_img:hover, #women img:hover, #men img:hover, 
+#jewelry img:hover, #crafts img:hover, #kids img:hover,
+.upper-layer:hover {
     opacity: 0.8;
     cursor: pointer;
 }
@@ -295,8 +293,8 @@ h2 {
     bottom: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    align-items: flex-start;
+    justify-content: center;
+    gap: 5px;
     text-transform: uppercase;
     background: rgba(54, 42, 79, 0.8);
     padding-left: 15px;
@@ -307,7 +305,6 @@ h2 {
     font-family: 'Lora', sans-serif;
     font-size: 25px;
     line-height: 0.8;
-    font-weight: 700;
     color: #ef5966;
 }
 
@@ -530,27 +527,22 @@ input {
 
 
 
-
-
-
-
-
-
-footer {
-    font-family: Lato, sans-serif;
-}
-
 .footer-columns {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     width: 1170px;
-    font-family: Lato, sans-serif;
     line-height: 30px;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    border-width: 1px 0;
 }
 
+.footer-columns, .copyright {
+    padding-left: 20px;
+    border-style: solid;
+    border-color: #b9b9b9;
+}
 
 .footer_tittle {
     font-size: 25px;
@@ -680,6 +672,8 @@ footer {
     line-height: 30px;
     font-weight: 400;
     color: #434343;
+    border-width: 0 0 1px;
+    margin-bottom: 10px;
 }
 
 .copyright a {
@@ -740,7 +734,6 @@ footer hr {
     border-bottom-style: solid;
     border-bottom-width: 1px;
     font-size: 30px;
-    /* font-family: 'Lato', sans-serif;*/
 }
 .products-header-arrows {
     display: flex;
@@ -770,6 +763,7 @@ footer hr {
 }
 .featured-products-header-arrow:hover {
     background-color: #f0626e;
+    cursor: pointer;
 }
 .buttons-baby-shop {
     display: flex;
@@ -793,6 +787,7 @@ footer hr {
 .buttons-text:hover{
     background-color: white;
     color: #f0626e;
+    cursor: pointer;
 }
 .buttons-gift {
     display: flex;
@@ -803,6 +798,7 @@ footer hr {
 .buttons-gift:hover{
     background-color: white;
     color: #00A1BE;
+    cursor: pointer;
 }
 .buttons-cart {
     display: flex;
@@ -813,6 +809,7 @@ footer hr {
 .buttons-cart:hover{
     background-color: white;
     color: #f0626e;
+    cursor: pointer;
 }
 .buttons-price {
     display: flex;
@@ -844,6 +841,7 @@ i {
 .product-icon:hover{
     color: white;
     background-color: #b9b9b9;
+    cursor: pointer;
 }
 .product-icon-price{
     display: flex;
@@ -931,9 +929,11 @@ i {
 .blue-note{
     background-color: #05aecc;
 }
-.new-products-image:hover img,
-.new-products-center-image:hover img,
-.featured-products-image:hover img {
+.new-products-image img:hover,
+.new-products-center-image img:hover,
+.featured-products-image img:hover,
+.featured-products-header-arrow:hover,
+.new-products-header-arrow:hover {
     opacity: 0.8;
     cursor: pointer;
 }
@@ -970,6 +970,11 @@ i {
 .who_we_are_text{
     width: 1120px;
     margin: 28px;
+    
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 400;
+    color: #464646;
 }
 
 .size_text{
