--- a/stylesheet.css
+++ b/stylesheet.css
@@ -772,7 +772,7 @@ input {
     cursor: pointer;
 }
 .new-products-image-1{
-    background: url("images/new_prod.png");
+    background: url("images/new_prod1.png");
     height: 200px;
     width: 370px;
 }
