--- a/stylesheet.css
+++ b/stylesheet.css
@@ -486,6 +486,8 @@ input {
 
 .jewelry-title .main-rectangle {
     display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     width: 85px;
     height: 100%;
     background: rgba(54, 42, 79, 0.58);
@@ -526,17 +528,14 @@ input {
 }
 
 .jewelry-name {
-    position: absolute;
-    bottom: 110px;
-    right: -80px;
     font-family: 'Lora', sans-serif;
+    padding-left: 25px;
     font-size: 55px;
     font-weight: 400;
     text-transform: uppercase;
     color: #ffffff;
     transform: rotate(-90deg);
 }
-
 .jewelry-name:hover {
     cursor: pointer;
     color: rgba(255, 255, 255, 0.6);
