--- a/stylesheet.css
+++ b/stylesheet.css
@@ -722,6 +722,7 @@ input {
     display: flex;
     justify-content: space-between;
     width: 1170px;
+    height: 200px;
 }
 .new-products-center-image {
     position: relative;
