--- a/stylesheet.css
+++ b/stylesheet.css
@@ -198,34 +198,46 @@ h2 {
 .navigation_img {
     width: 1170px;
     margin: 15px 0;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    gap: 5px;
-}
+    display: grid;
+    grid-template-rows: 320px 245px 171px 335px;
+    grid-template-columns: 670px 494px;
+    grid-gap: 5px;
 
-.img-container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    flex-direction: row;
-    gap: 5px;
-}
-
-.right-col, .left-col {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
 }
 
 #men {
-    width: 670px;
-    height: 570px;
+    grid-row: 1 / 3;
+    grid-column: 1;
     background-image: url("images/men.png");
 
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+}
+
+#women {
+    grid-row: 1;
+    grid-column: 2;
+}
+
+#kids {
+    grid-row: 2;
+    grid-column: 2;
+}
+
+#search {
+    grid-row: 3;
+    grid-column: 1;
+}
+
+#crafts {
+    grid-row: 4;
+    grid-column: 1;
+}
+
+#jewelry {
+    grid-row: 3/5;
+    grid-column: 2;
 }
 
 .men-text {
@@ -289,10 +301,7 @@ h2 {
 }
 
 #women {
-    width: 494px;
-    height: 320px;
     background-image: url("images/women.png");
-
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -333,10 +342,7 @@ h2 {
 }
 
 #kids {
-    width: 494px;
-    height: 245px;
     background-image: url("images/kids.png");
-
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -349,10 +355,7 @@ h2 {
 }
 
 #crafts {
-    width: 670px;
-    height: 335px;
     background-image: url("images/crafts.png");
-
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -439,8 +442,6 @@ input {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 670px;
-    height: 171px;
     background-color: #f0626e;
 }
 #search_form {
@@ -461,11 +462,7 @@ input {
 
 /* Search end */
 
-
-
 #jewelry {
-    width: 494px;
-    height: 510px;
     background-image: url("images/jewelry.png");
     display: flex;
     flex-direction: column;
@@ -536,6 +533,7 @@ input {
     color: #ffffff;
     transform: rotate(-90deg);
 }
+
 .jewelry-name:hover {
     cursor: pointer;
     color: rgba(255, 255, 255, 0.6);
@@ -548,8 +546,6 @@ input {
     border-top: 10px solid rgba(197, 81, 91, 1);
     border-left: 15px solid transparent;
 }
-
-
 
 .footer-columns {
     display: flex;
